kubernetes/solace/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: solace
  labels:
    kubernetes.io/metadata.name: solace
