kubernetes/solace/solace-sidecar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solace  # Replace with your desired deployment name
  labels:
    app: solace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solace
  template:
    metadata:
      labels:
        app: solace
    spec:
      containers:
      - name: discovery-agent
        image: solace/event-management-agent:latest
        volumeMounts:
          - name: ema-config-volume
            mountPath: /config/ema.yml
            subPath: ema.yml
        resources:
          requests:
            cpu: 500m
            memory: 1512Mi
          limits:
            cpu: 500m
            memory: 1512Mi
      - name: solace
        image: solace/solace-pubsub-standard:10.25.13
        resources:
          requests:
            cpu: 2000m  # Adjust CPU request if needed
            memory: 6.0Gi  # Increase memory request to 2.5 GiB (or slightly higher)
          limits:
            cpu: 3000m  # Adjust CPU limit if needed
            memory: 6.0Gi
        volumeMounts:
           - mountPath: /dev/shm
             name: dshm
        ports:
        - containerPort: 8008
          protocol: TCP
        - containerPort: 1443
          protocol: TCP
        - containerPort: 1943
          protocol: TCP
        - containerPort: 1883
          protocol: TCP
        - containerPort: 5671
          protocol: TCP
        - containerPort: 5672
          protocol: TCP
        - containerPort: 8000
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8883
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        - containerPort: 55555
          protocol: TCP
        - containerPort: 55554
          protocol: TCP
        - containerPort: 55003
          protocol: TCP
        - containerPort: 55443
          protocol: TCP
        - containerPort: 2222
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8080
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: ema-config-volume
          configMap:
            name: ema-config
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "solace"
  namespace: solace
spec:
  ports:
  - name: smf
    port: 55555
    protocol: TCP
    targetPort: 55555
  - name: "web-http"
    port: 8008
    protocol: "TCP"
    targetPort: 8008
  - name: "web-tls"
    port: 1443
    protocol: "TCP"
    targetPort: 1443
  - name: "semp-manager"
    port: 8080
    protocol: "TCP"
    targetPort: 8080
  - name: "rest-vpn"
    port: 9000
    protocol: "TCP"
    targetPort: 9000
  selector:
    app: "solace"
  type: "ClusterIP"

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-karavan
  namespace: solace
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector:
        matchLabels:
          namespace: karavan
