kubernetes/solace/solace.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solace-discovery-agent
  namespace: solace
  labels:
    app: discovery-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-agent
  template:
    metadata:
      labels:
        app: discovery-agent
    spec:
      containers:
      - name: discovery-agent
        image: solace/event-management-agent:latest
        volumeMounts:
          - name: ema-config-volume
            mountPath: /config/ema.yml
            subPath: ema.yml
          - name: cert-volume
            mountPath: /etc/ssl/certs/solace.crt
            subPath: solace.crt
        resources:
          requests:
            cpu: 800m
            memory: 2512Mi
          limits:
            cpu: 800m
            memory: 2512Mi
      volumes:
        - name: ema-config-volume
          configMap:
            name: ema-config
        - name: cert-volume
          configMap:
            name: solace-agent-certs

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solace
  labels:
    app: solace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solace
  template:
    metadata:
      labels:
        app: solace
    spec:
      containers:
      - name: solace
        image: solace/solace-pubsub-standard:10.25.13
        resources:
          requests:
            cpu: 4000m  # Adjust CPU request if needed
            memory: 8.0Gi  # Increase memory request to 2.5 GiB (or slightly higher)
          limits:
            cpu: 4000m  # Adjust CPU limit if needed
            memory: 8.0Gi
        volumeMounts:
           - mountPath: /dev/shm
             name: dshm
        ports:
        - containerPort: 8008
          protocol: TCP
        - containerPort: 1443
          protocol: TCP
        - containerPort: 1943
          protocol: TCP
        - containerPort: 1883
          protocol: TCP
        - containerPort: 5671
          protocol: TCP
        - containerPort: 5672
          protocol: TCP
        - containerPort: 8000
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8883
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        - containerPort: 9000
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        - containerPort: 55555
          protocol: TCP
        - containerPort: 55554
          protocol: TCP
        - containerPort: 55003
          protocol: TCP
        - containerPort: 55443
          protocol: TCP
        - containerPort: 2222
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 8080
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
        - name: ema-config-volume
          configMap:
            name: ema-config
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "solace"
  namespace: solace
spec:
  ports:
  - name: smf
    port: 55555
    protocol: TCP
    targetPort: 55555
  - name: "web-http"
    port: 8008
    protocol: "TCP"
    targetPort: 8008
  - name: "web-tls"
    port: 1443
    protocol: "TCP"
    targetPort: 1443
  - name: "semp-manager"
    port: 8080
    protocol: "TCP"
    targetPort: 8080
  - name: "rest-vpn"
    port: 9000
    protocol: "TCP"
    targetPort: 9000
  selector:
    app: "solace"
  type: "ClusterIP"     
 
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-karavan
  namespace: solace
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: karavan
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: allow-confluent-to-solace
#   namespace: solace
# spec:
#   podSelector:
#     matchLabels:
#       app: solace 
#   policyTypes:
#   - Ingress
#   ingress:
#   - from:
#     - namespaceSelector:
#         matchLabels:
#           kubernetes.io/metadata.name: confluent
#     ports:
#     # - protocol: TCP
#     #   port: 8080    # API SEMP / Manager
#     - protocol: TCP
#       port: 55555   # Protocolo SMF (Datos)
#     - protocol: TCP
#       port: 9000    # REST Messaging
# ---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: solace-egress-to-confluent
#   namespace: solace
# spec:
#   podSelector:
#     matchLabels:
#       app: solace
#   policyTypes:
#   - Egress
#   egress:
#   - to:
#     - namespaceSelector:
#         matchLabels:
#           kubernetes.io/metadata.name: confluent
#     ports:
#     - protocol: TCP
#       port: 9071 # Puerto de Kafka
